--- a/service/interaction/etc/interaction-api.yaml
+++ b/service/interaction/etc/interaction-api.yaml
@@ -1,3 +1,9 @@
 Name: interaction-api
 Host: 0.0.0.0
-Port: 8888
+Port: 8889
+
+UserRpc:
+  Etcd:
+    Hosts:
+      - 43.139.184.22:2379
+    Key: user.rpc
